# flashpaste

./: .gitignore  Flash Paste - PRD.md  README.md  build_deb.sh  io.github.angelorosa.flashpaste.json  meson.build  verify_logic.py
data/: meson.build
flashpaste_0.1.0_all/DEBIAN/: control
flashpaste_0.1.0_all/usr/share/flashpaste/src/: main.py  window.py
flashpaste_0.1.1_all/DEBIAN/: control
flashpaste_0.1.1_all/usr/share/flashpaste/src/: main.py
flashpaste_0.1.2_all/DEBIAN/: control
flashpaste_0.1.2_all/usr/share/flashpaste/src/: main.py  pastebin_client.py  window.py
flashpaste_0.1.3_all/DEBIAN/: control
flashpaste_0.1.3_all/usr/share/flashpaste/src/: main.py  preferences.py
flashpaste_0.1.3_all/usr/share/glib-2.0/schemas/: io.github.angelorosa.flashpaste.gschema.xml
flashpaste_0.1.4_all/DEBIAN/: control
flashpaste_0.1.4_all/usr/share/flashpaste/src/: main.py  pastebin_client.py  preferences.py
flashpaste_0.1.5_all/DEBIAN/: control
flashpaste_0.1.5_all/usr/share/applications/: io.github.angelorosa.flashpaste.desktop
flashpaste_0.1.5_all/usr/share/flashpaste/src/: main.py  window.py
flashpaste_0.1.6_all/usr/share/flashpaste/src/: database.py  main.py  pastebin_client.py
local_run/schemas/: gschemas.compiled
packaging/: control
src/: flashpaste.in  meson.build  window.py
